--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -12,12 +12,37 @@ input::-webkit-inner-spin-button {
   height: 481px;
   padding: 48px 45px;
 
-  .top__wrapper{
+  .top__wrapper {
     display: flex;
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
     gap: 6px;
+  }
+
+  .bottom__wrapper {
+    margin-top: 40px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    gap: 6px;
+
+    .bottom_wrapper-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 379px;
+
+      .card__span--error {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 24px;
+        text-align: right;
+        color: #E17457;
+
+      }
+    }
   }
 
   .middle__wrapper {
@@ -27,9 +52,10 @@ input::-webkit-inner-spin-button {
     flex-direction: column;
     gap: 16px;
 
-    .card__span{
+    .card__span {
       margin-top: 40px;
     }
+
     .middle__grid {
       display: grid;
       grid-template-columns: repeat(3, 117px);
@@ -48,6 +74,7 @@ input::-webkit-inner-spin-button {
         text-align: right;
         padding-right: 13px;
         border: 2px solid #f3f9fa;
+
         &::placeholder {
           font-weight: 700;
           font-size: 24px;
@@ -55,11 +82,13 @@ input::-webkit-inner-spin-button {
           text-align: right;
           color: #547878;
         }
+
         &:focus {
           border: 2px solid #26c2ae;
         }
       }
     }
+
   }
 
   .card__span {
