--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -11,84 +11,159 @@ input::-webkit-inner-spin-button {
   width: 920px;
   height: 481px;
   padding: 48px 45px;
+  display: flex;
+  gap: 48px;
 
-  .top__wrapper {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    gap: 6px;
-  }
-
-  .bottom__wrapper {
-    margin-top: 40px;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    gap: 6px;
-
-    .bottom_wrapper-container {
+  .left__wrapper {
+    .top__wrapper {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      width: 379px;
+      align-items: flex-start;
+      justify-content: center;
+      flex-direction: column;
+      gap: 6px;
+    }
 
-      .card__span--error {
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 24px;
-        text-align: right;
-        color: #E17457;
+    .bottom__wrapper {
+      margin-top: 40px;
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      flex-direction: column;
+      gap: 6px;
 
+      .bottom_wrapper-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 379px;
+
+        .card__span--error {
+          font-weight: 700;
+          font-size: 16px;
+          line-height: 24px;
+          text-align: right;
+          color: #E17457;
+
+        }
       }
     }
-  }
 
-  .middle__wrapper {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    gap: 16px;
+    .middle__wrapper {
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      flex-direction: column;
+      gap: 16px;
 
-    .card__span {
-      margin-top: 40px;
-    }
+      .card__span {
+        margin-top: 40px;
+      }
 
-    .middle__grid {
-      display: grid;
-      grid-template-columns: repeat(3, 117px);
-      column-gap: 14px;
-      row-gap: 16px;
+      .middle__grid {
+        display: grid;
+        grid-template-columns: repeat(3, 117px);
+        column-gap: 14px;
+        row-gap: 16px;
 
-      .middle__grid-input {
-        font-weight: 700;
-        font-size: 24px;
-        line-height: 36px;
-        color: #00474b;
-        border: none;
-        background: #f3f9fa;
-        border-radius: 5px;
-        outline: none;
-        text-align: right;
-        padding-right: 13px;
-        border: 2px solid #f3f9fa;
-
-        &::placeholder {
+        .middle__grid-input {
           font-weight: 700;
           font-size: 24px;
           line-height: 36px;
+          color: #00474b;
+          border: none;
+          background: #f3f9fa;
+          border-radius: 5px;
+          outline: none;
           text-align: right;
-          color: #547878;
-        }
+          padding-right: 13px;
+          border: 2px solid #f3f9fa;
 
-        &:focus {
-          border: 2px solid #26c2ae;
+          &::placeholder {
+            font-weight: 700;
+            font-size: 24px;
+            line-height: 36px;
+            text-align: right;
+            color: #547878;
+          }
+
+          &:focus {
+            border: 2px solid #26c2ae;
+          }
         }
+      }
+
+    }
+  }
+
+  .right__wrapper {
+    background: #00474B;
+    border-radius: 15px;
+    width: 413px;
+    height: 100%;
+    padding: 40px;
+    gap: 25px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    .right__button {
+      background: #26C2AE;
+      border-radius: 5px;
+      width: 100%;
+      height: 48px;
+      border: none;
+      font-weight: 700;
+      font-size: 20px;
+      line-height: 30px;
+      text-align: center;
+      cursor: pointer;
+      color: #00474B;
+      margin-top: 70px;
+      padding: 9px 37px;
+
+      &:hover {
+        background: #9FE8DF;
+        border-radius: 5px;
       }
     }
 
+    .label__container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+
+      .label__calcl {
+        font-weight: 700;
+        font-size: 48px;
+        line-height: 71px;
+        text-align: right;
+        letter-spacing: -1px;
+        color: #26C2AE;
+      }
+
+      .label__left-container {
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        flex-direction: column;
+        text-align: start;
+
+        .label__header {
+          font-weight: 700;
+          font-size: 16px;
+          line-height: 24px;
+          color: #FFFFFF;
+        }
+
+        .label__subtitle {
+          font-weight: 700;
+          font-size: 13px;
+          line-height: 19px;
+          color: #7F9D9F;
+        }
+      }
+    }
   }
 
   .card__span {
